Matrix Multiply en numpy update

--- a/notebooks/Practicum numpy/numpy/numpy_opdracht1.ipynb
+++ b/notebooks/Practicum numpy/numpy/numpy_opdracht1.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "id": "42257a05-c794-4121-a9cf-fe53fa3a1dc1",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "id": "2b471d98-c5b0-4db0-a1c6-155094548c23",
    "metadata": {},
    "outputs": [],
@@ -89,20 +89,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "id": "e5fa129a-d9a8-4899-ba69-87537e1819f5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "earth.jpg         mars.jpg          neptune.jpg       venus.png\n",
-      "earth_scaled.jpg  mars.nasa.jpg     saturn.jpg\n",
-      "jupiter.jpg       mercury.jpg       uranus.jpg\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ls pics"
    ]
@@ -160,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 39,
    "id": "cbcb0e9b-46f8-490d-9a85-eb29037a93cb",
    "metadata": {},
    "outputs": [
@@ -168,6 +158,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "      Name   Diameter          Mass   Inclination   Eccentricity  \\\n",
+      "0  Mercury     4879.4   3.302×10^23      7.004000       0.205636   \n",
+      "1    Venus    12103.6   4.869×10^24      3.394710       0.006777   \n",
+      "2    Earth    12756.3   5.974×10^24      0.000050       0.016711   \n",
+      "3     Mars     6794.4   6.419×10^23      1.850610       0.093394   \n",
+      "4  Jupiter   142984.0   1.899×10^27      1.305300       0.048386   \n",
+      "5   Saturn   120536.0   5.688×10^26      2.484460       0.053862   \n",
+      "6   Uranus    51118.0   8.683×10^25      0.774000       0.047257   \n",
+      "7  Neptune    49572.0   1.024×10^26      1.769170       0.008590   \n",
+      "8    Pluto     2370.0     1.3×10^22     17.089001       0.250249   \n",
+      "\n",
+      "    Semi_majorAxis   SurfaceGravity   OrbitalPeriod   SiderealRotation  \\\n",
+      "0         0.387099             3.70        0.241000          58.650000   \n",
+      "1         0.723336             8.87        0.615000         243.018700   \n",
+      "2         1.000003             9.78        1.000000           0.997271   \n",
+      "3         1.523710             3.71        1.881000           1.025950   \n",
+      "4         5.202887            24.79       11.860000           0.413500   \n",
+      "5         9.536676             8.96       29.460000           0.426400   \n",
+      "6        19.189165             7.77       84.010000           0.718100   \n",
+      "7        30.069923            11.00      164.790000           0.671200   \n",
+      "8        39.445070             0.62      247.740662           6.387230   \n",
+      "\n",
+      "    Satellites  \n",
+      "0            0  \n",
+      "1            0  \n",
+      "2            1  \n",
+      "3            2  \n",
+      "4           63  \n",
+      "5           64  \n",
+      "6           27  \n",
+      "7           14  \n",
+      "8            5  \n",
       "Index(['Name', ' Diameter', ' Mass', ' Inclination', ' Eccentricity',\n",
       "       ' Semi_majorAxis', ' SurfaceGravity', ' OrbitalPeriod',\n",
       "       ' SiderealRotation', ' Satellites'],\n",
@@ -177,7 +199,7 @@
    ],
    "source": [
     "planetDataFrame = pd.read_csv(filename, header = 0, sep = ',')\n",
-    "#print(planetDataFrame)\n",
+    "print(planetDataFrame)\n",
     "type(planetDataFrame)\n",
     "print(planetDataFrame.columns)"
    ]
@@ -192,21 +214,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "id": "83d43bb9-694e-4390-a8a3-30f6535f6591",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "PIL.JpegImagePlugin.JpegImageFile"
-      ]
-     },
-     "execution_count": 75,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "img = Image.open('pics/earth.jpg')\n",
     "type(img)\n",
@@ -225,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "id": "8894e6bd-6237-4cf6-8d95-222d6a3be56e",
    "metadata": {},
    "outputs": [],
@@ -248,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "id": "2e34fa25-3cc3-4e5f-b29a-7793e505db61",
    "metadata": {},
    "outputs": [],
@@ -266,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "id": "d72b54e1-68dd-4d82-9064-a941988b6f08",
    "metadata": {},
    "outputs": [],
@@ -296,7 +307,8 @@
     "# stappenplan\n",
     "'''\n",
     "- een csv file maken van planeten\n",
-    "- voeg hier aan de persentage van van de planeten hierin. Waarbij de Aarde waarde 1 heeft\n",
+    "- voeg hier aan de persentage van van de planeten hierin. \n",
+    "- scale factor; Waarbij de Aarde waarde 1 heeft\n",
     "- voeg de paths naar de afbeeldingen toe\n",
     "- loop maken van alle planeten in verhouding tot de aarde. \n",
     "'''"
@@ -309,8 +321,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plantTable = { 'Jupiter': 1120, 'Saturnus': 945, 'Uranus': 400, 'Neptunus': 388, 'Aarde': 100, {'image':\"pics/earth.jpg\"}, 'Venus': 95, 'Mars': 53}\n",
-    "plantTable.items()\n"
+    "# plantTable = { 'Jupiter': 1120, 'Saturnus': 945, 'Uranus': 400, 'Neptunus': 388, 'Aarde': 100, {'image':\"pics/earth.jpg\"}, 'Venus': 95, 'Mars': 53}\n",
+    "# plantTable.items()\n"
    ]
   },
   {
@@ -320,71 +332,130 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import csv\n",
+    "# import csv\n",
     "\n",
-    "planetFile = open('planets.csv)\n",
-    "column {'planet':[], 'scale to Earth':[], 'image':[]}\n",
-    "column = {}\n",
-    "for h in headers:\n",
-    "    column[h] = []\n",
-    "    \n",
-    "column {'planet': ['Jupiter', 'Saturnus', 'Uranus', 'Neptunus', 'Aarde', 'Venus', 'Mars'], 'scale'; ['1120%', '945%', '400%', '388%', '100%', '95%', '53%'], 'image path'[]}\n"
+    "# planetFile = open('planetsInLoop.csv)\n",
+    "# column {'planet':[], 'scale to Earth':[], 'image':[]}\n",
+    "# column = {}\n",
+    "# for h in headers:\n",
+    "#     column[h] = []\n",
+    "\n",
+    "# column {'planet': ['Jupiter', 'Saturnus', 'Uranus', 'Neptunus', 'Aarde', 'Venus', 'Mars'], 'scale'; ['1120%', '945%', '400%', '388%', '100%', '95%', '53%'], 'image path'[]}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
    "id": "b06b3674-572b-4e52-8af4-2b2189e72ecd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# import csv\n",
+    "  \n",
+    "# headerList = ['planet', 'scale to Earth', 'scale factor', 'image path']\n",
+    "# planetData = [[\"Jupiter\", \"1120%\", 112, 'pics/jupiter.jpg'][\"Saturnus\", \"945%\", 94.5, 'pics/saturn.jpg'][\"Neptunus\", \"400%\", 40, 'pics/neptune.jpg'][\"Aarde\", \"100%\", 1, 'pics/earth.jpg'][\"Venus\", \"95%\", 95, 'venus.png'][\"Mars\", \"53%\", 53, 'pics/mars.jpg']]\n",
+    "\n",
+    "\n",
+    "# with open(\"planetsInLoop.csv\", 'w') as file:\n",
+    "#     dw = csv.DictWriter(file, delimiter=',', fieldnames=headerList)\n",
+    "#     dw.writeheader()\n",
+    "\n",
+    "# fileContent = pd.read_csv(\"planetsInLoop.csv\")\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "f3a31a77-afca-48e8-8d59-70ee9be92424",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<>:4: SyntaxWarning: 'tuple' object is not callable; perhaps you missed a comma?\n",
-      "<>:4: SyntaxWarning: 'tuple' object is not callable; perhaps you missed a comma?\n",
-      "/var/folders/kv/4dctl0bs2wj546ls4sc8khmh0000gn/T/ipykernel_66284/4041569636.py:4: SyntaxWarning: 'tuple' object is not callable; perhaps you missed a comma?\n",
-      "  planetData = [(\"Jupiter\", \"1120%\", \"...\")(\"Saturnus\", \"945%\", \"...\")(\"Neptunus\", \"400%\", \"...\")(\"Aarde\", \"100%\", \"...\")(\"Venus\", \"95%\", \"...\")(\"Mars\", \"53%\", \"..\")]\n",
-      "/var/folders/kv/4dctl0bs2wj546ls4sc8khmh0000gn/T/ipykernel_66284/4041569636.py:4: SyntaxWarning: 'tuple' object is not callable; perhaps you missed a comma?\n",
-      "  planetData = [(\"Jupiter\", \"1120%\", \"...\")(\"Saturnus\", \"945%\", \"...\")(\"Neptunus\", \"400%\", \"...\")(\"Aarde\", \"100%\", \"...\")(\"Venus\", \"95%\", \"...\")(\"Mars\", \"53%\", \"..\")]\n",
-      "/var/folders/kv/4dctl0bs2wj546ls4sc8khmh0000gn/T/ipykernel_66284/4041569636.py:4: SyntaxWarning: 'tuple' object is not callable; perhaps you missed a comma?\n",
-      "  planetData = [(\"Jupiter\", \"1120%\", \"...\")(\"Saturnus\", \"945%\", \"...\")(\"Neptunus\", \"400%\", \"...\")(\"Aarde\", \"100%\", \"...\")(\"Venus\", \"95%\", \"...\")(\"Mars\", \"53%\", \"..\")]\n",
-      "/var/folders/kv/4dctl0bs2wj546ls4sc8khmh0000gn/T/ipykernel_66284/4041569636.py:4: SyntaxWarning: 'tuple' object is not callable; perhaps you missed a comma?\n",
-      "  planetData = [(\"Jupiter\", \"1120%\", \"...\")(\"Saturnus\", \"945%\", \"...\")(\"Neptunus\", \"400%\", \"...\")(\"Aarde\", \"100%\", \"...\")(\"Venus\", \"95%\", \"...\")(\"Mars\", \"53%\", \"..\")]\n",
-      "/var/folders/kv/4dctl0bs2wj546ls4sc8khmh0000gn/T/ipykernel_66284/4041569636.py:4: SyntaxWarning: 'tuple' object is not callable; perhaps you missed a comma?\n",
-      "  planetData = [(\"Jupiter\", \"1120%\", \"...\")(\"Saturnus\", \"945%\", \"...\")(\"Neptunus\", \"400%\", \"...\")(\"Aarde\", \"100%\", \"...\")(\"Venus\", \"95%\", \"...\")(\"Mars\", \"53%\", \"..\")]\n",
-      "/var/folders/kv/4dctl0bs2wj546ls4sc8khmh0000gn/T/ipykernel_66284/4041569636.py:4: SyntaxWarning: 'tuple' object is not callable; perhaps you missed a comma?\n",
-      "  planetData = [(\"Jupiter\", \"1120%\", \"...\")(\"Saturnus\", \"945%\", \"...\")(\"Neptunus\", \"400%\", \"...\")(\"Aarde\", \"100%\", \"...\")(\"Venus\", \"95%\", \"...\")(\"Mars\", \"53%\", \"..\")]\n",
-      "/var/folders/kv/4dctl0bs2wj546ls4sc8khmh0000gn/T/ipykernel_66284/4041569636.py:4: SyntaxWarning: 'tuple' object is not callable; perhaps you missed a comma?\n",
-      "  planetData = [(\"Jupiter\", \"1120%\", \"...\")(\"Saturnus\", \"945%\", \"...\")(\"Neptunus\", \"400%\", \"...\")(\"Aarde\", \"100%\", \"...\")(\"Venus\", \"95%\", \"...\")(\"Mars\", \"53%\", \"..\")]\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'tuple' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [106]\u001b[0m, in \u001b[0;36m<cell line: 4>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mcsv\u001b[39;00m\n\u001b[1;32m      3\u001b[0m headerList \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mplanet\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mscale to Earth\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mimage path\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m----> 4\u001b[0m planetData \u001b[38;5;241m=\u001b[39m [\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mJupiter\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m1120\u001b[39;49m\u001b[38;5;124;43m%\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m...\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mSaturnus\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m945\u001b[39;49m\u001b[38;5;124;43m%\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m...\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNeptunus\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m400\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m...\u001b[39m\u001b[38;5;124m\"\u001b[39m)(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAarde\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m100\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m...\u001b[39m\u001b[38;5;124m\"\u001b[39m)(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mVenus\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m95\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m...\u001b[39m\u001b[38;5;124m\"\u001b[39m)(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMars\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m53\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m..\u001b[39m\u001b[38;5;124m\"\u001b[39m)]\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mplanets.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mw\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m file:\n\u001b[1;32m      8\u001b[0m     dw \u001b[38;5;241m=\u001b[39m csv\u001b[38;5;241m.\u001b[39mDictWriter(file, delimiter\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m,\u001b[39m\u001b[38;5;124m'\u001b[39m, fieldnames\u001b[38;5;241m=\u001b[39mheaderList)\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'tuple' object is not callable"
+      "Index(['Name', ' Diameter', ' Mass', ' Inclination', ' Eccentricity',\n",
+      "       ' Semi_majorAxis', ' SurfaceGravity', ' OrbitalPeriod',\n",
+      "       ' SiderealRotation', ' Satellites', 'ImagePath'],\n",
+      "      dtype='object')\n"
      ]
     }
    ],
    "source": [
+    "filename = \"csv/planetsLoop.csv\"\n",
+    "planetDataFrame = pd.read_csv(filename, header = 0, sep = ',')\n",
     "\n",
+    "pathColumn = ['pics/mercury.jpg', 'pics/venus.png', 'pics/earth.jpg', 'pics/mars.jpg', 'pics/jupiter.jpg', 'pics/saturn.jpg', 'pics/uranus.jpg', \n",
+    "'pics/neptune.jpg', 'pics/pluto.jpg']\n",
+    "\n",
+    "\n",
+    "planetDataFrame[\"ImagePath\"] = pathColumn\n",
+    "\n",
+    "# print(planetDataFrame)\n",
+    "# type(planetDataFrame)\n",
+    "print(planetDataFrame.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "30536a95-6ac8-468f-ad8f-61491d40c99e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import csv\n",
+    "\n",
+    "# planetHeader = ['Jupiter', 'Saturnus', 'Uranus', 'Neptunus', 'Aarde', 'Venus', 'Mars']\n",
+    "# planetPercentage = [ '1120%', '945%', '400%', '388%', '100%', '95%', '53%']\n",
+    "\n",
+    "\n",
+    "# pathPlanet = ['pics/mercury.jpg', 'pics/venus.png', 'pics/earth.jpg', 'pics/mars.jpg', 'pics/jupiter.jpg', 'pics/saturn.jpg', 'pics/uranus.jpg', \n",
+    "# 'pics/neptune.jpg', 'pics/pluto.jpg']\n",
+    "\n",
+    "\n",
+    "\n",
+    "# with open('planetsLoop.csv', 'w') as file:\n",
+    "\n",
+    "#     writer = csv.writer(file)\n",
+    " \n",
+    "#     writer.writerow(planetHeader)\n",
+    "#     writer.writerow(planetPercentage)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "21a1f93c-e55e-46af-b5e6-63a4409ada03",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import csv\n",
-    "  \n",
-    "headerList = ['planet', 'scale to Earth', 'image path']\n",
-    "planetData = [[\"Jupiter\", \"1120%\", \"...\"][\"Saturnus\", \"945%\", \"...\"][\"Neptunus\", \"400%\", \"...\"][\"Aarde\", \"100%\", \"...\"][\"Venus\", \"95%\", \"...\"][\"Mars\", \"53%\", \"..\"]]\n",
+    "import pandas as pd\n",
+    "\n",
+    "header = ['Planets', 'Percentage', 'scale factor']\n",
+    "planets = {'Jupiter': '1120%', 'Saturnus': '945%', 'Uranus': '400%', 'Neptunus': '388%' , 'Aarde': '100%', 'Venus': '95%', 'Mars': '53%'}\n",
+    "# scaleFactor = ['11.2', '9.45', '40', '3.88', '1', '0.95', '0.53']\n",
+    "# scaleFactor[\"Scale Factor\"] = scaleFactor\n",
+    "# scaleFactor.to_csv(\"planetsLoop_1.csv\")\n",
+    "\n",
+    "pathColumn = ['pics/mercury.jpg', 'pics/venus.png', 'pics/earth.jpg', 'pics/mars.jpg', 'pics/jupiter.jpg', 'pics/saturn.jpg', 'pics/uranus.jpg', \n",
+    "'pics/neptune.jpg', 'pics/pluto.jpg']\n",
     "\n",
     "\n",
-    "with open(\"planets.csv\", 'w') as file:\n",
-    "    dw = csv.DictWriter(file, delimiter=',', fieldnames=headerList)\n",
-    "    dw.writeheader()\n",
+    "planetDataFrame[\"SCALE FACTOR\"] = pathColumn\n",
+    "# planetPath = ['pics/mercury.jpg', 'pics/venus.png', 'pics/earth.jpg', 'pics/mars.jpg', 'pics/jupiter.jpg', 'pics/saturn.jpg', 'pics/uranus.jpg', \n",
+    "# 'pics/neptune.jpg', 'pics/pluto.jpg']\n",
     "\n",
-    "fileContent = pd.read_csv(\"planets.csv\")\n",
-    "fileContent"
+    "with open('planetsLoop_1.csv', 'w', newline='') as file:\n",
+    "\n",
+    "    writer = csv.writer(file)\n",
+    "    writer.writerow(header)\n",
+    "    for row in planets.items():\n",
+    "        \n",
+    "        writer.writerow(row)   \n",
+    "        "
    ]
   },
   {
