--- a/notebooks/Practicum numpy/numpy/numpy_opdracht1.ipynb
+++ b/notebooks/Practicum numpy/numpy/numpy_opdracht1.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "42257a05-c794-4121-a9cf-fe53fa3a1dc1",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "2b471d98-c5b0-4db0-a1c6-155094548c23",
    "metadata": {},
    "outputs": [],
@@ -89,10 +89,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "e5fa129a-d9a8-4899-ba69-87537e1819f5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "earth.jpg         mars.jpg          neptune.jpg       venus.png\n",
+      "earth_scaled.jpg  mars.nasa.jpg     saturn.jpg\n",
+      "jupiter.jpg       mercury.jpg       uranus.jpg\n"
+     ]
+    }
+   ],
    "source": [
     "ls pics"
    ]
@@ -150,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 26,
    "id": "cbcb0e9b-46f8-490d-9a85-eb29037a93cb",
    "metadata": {},
    "outputs": [
@@ -214,10 +224,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "83d43bb9-694e-4390-a8a3-30f6535f6591",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PIL.JpegImagePlugin.JpegImageFile"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "img = Image.open('pics/earth.jpg')\n",
     "type(img)\n",
@@ -236,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "8894e6bd-6237-4cf6-8d95-222d6a3be56e",
    "metadata": {},
    "outputs": [],
@@ -259,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "2e34fa25-3cc3-4e5f-b29a-7793e505db61",
    "metadata": {},
    "outputs": [],
@@ -277,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "d72b54e1-68dd-4d82-9064-a941988b6f08",
    "metadata": {},
    "outputs": [],
@@ -299,10 +320,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "9389471a-ff71-424e-8335-d1605988820d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n- een csv file maken van planeten\\n- voeg hier aan de persentage van van de planeten hierin. \\n- scale factor; Waarbij de Aarde waarde 1 heeft\\n- voeg de paths naar de afbeeldingen toe\\n- loop/methode maken van alle planeten in verhouding tot de aarde. \\n'"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# stappenplan\n",
     "'''\n",
@@ -310,13 +342,13 @@
     "- voeg hier aan de persentage van van de planeten hierin. \n",
     "- scale factor; Waarbij de Aarde waarde 1 heeft\n",
     "- voeg de paths naar de afbeeldingen toe\n",
-    "- loop maken van alle planeten in verhouding tot de aarde. \n",
+    "- loop/methode maken van alle planeten in verhouding tot de aarde. \n",
     "'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "9f4ca31f-d9d2-43c0-aa89-60ad6f8d4355",
    "metadata": {},
    "outputs": [],
@@ -327,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "1c8a80cf-a6c2-4b1d-ab5b-a56f8be0281b",
    "metadata": {},
    "outputs": [],
@@ -345,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "b06b3674-572b-4e52-8af4-2b2189e72ecd",
    "metadata": {},
    "outputs": [],
@@ -368,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "id": "f3a31a77-afca-48e8-8d59-70ee9be92424",
    "metadata": {},
    "outputs": [
@@ -400,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 36,
    "id": "30536a95-6ac8-468f-ad8f-61491d40c99e",
    "metadata": {},
    "outputs": [],
@@ -426,10 +458,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
    "id": "21a1f93c-e55e-46af-b5e6-63a4409ada03",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [37]\u001b[0m, in \u001b[0;36m<cell line: 10>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m planets \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mJupiter\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m1120\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSaturnus\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m945\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mUranus\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m400\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNeptunus\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m388\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124m'\u001b[39m , \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAarde\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m100\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mVenus\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m95\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMars\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m53\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124m'\u001b[39m}\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m# scaleFactor = ['11.2', '9.45', '40', '3.88', '1', '0.95', '0.53']\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m# scaleFactor[\"Scale Factor\"] = scaleFactor\u001b[39;00m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;66;03m# scaleFactor.to_csv(\"planetsLoop_1.csv\")\u001b[39;00m\n\u001b[0;32m---> 10\u001b[0m df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mStatus\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[43mdf\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mStatus\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mreplace({\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mP\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mA\u001b[39m\u001b[38;5;124m'\u001b[39m})\n\u001b[1;32m     12\u001b[0m pathColumn \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpics/mercury.jpg\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpics/venus.png\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpics/earth.jpg\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpics/mars.jpg\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpics/jupiter.jpg\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpics/saturn.jpg\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpics/uranus.jpg\u001b[39m\u001b[38;5;124m'\u001b[39m, \n\u001b[1;32m     13\u001b[0m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpics/neptune.jpg\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpics/pluto.jpg\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m     16\u001b[0m planetDataFrame[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSCALE FACTOR\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m pathColumn\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    }
+   ],
    "source": [
     "import csv\n",
     "import pandas as pd\n",
@@ -439,6 +483,8 @@
     "# scaleFactor = ['11.2', '9.45', '40', '3.88', '1', '0.95', '0.53']\n",
     "# scaleFactor[\"Scale Factor\"] = scaleFactor\n",
     "# scaleFactor.to_csv(\"planetsLoop_1.csv\")\n",
+    "\n",
+    "df['Status'] = df['Status'].replace({'P': 'A'})\n",
     "\n",
     "pathColumn = ['pics/mercury.jpg', 'pics/venus.png', 'pics/earth.jpg', 'pics/mars.jpg', 'pics/jupiter.jpg', 'pics/saturn.jpg', 'pics/uranus.jpg', \n",
     "'pics/neptune.jpg', 'pics/pluto.jpg']\n",
@@ -456,6 +502,47 @@
     "        \n",
     "        writer.writerow(row)   \n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "fc005688-736c-4b80-9846-e11eb2ddaaf7",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'str' object has no attribute 'read'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "File \u001b[0;32m~/MakeAIWork/env/lib/python3.8/site-packages/PIL/Image.py:3096\u001b[0m, in \u001b[0;36mopen\u001b[0;34m(fp, mode, formats)\u001b[0m\n\u001b[1;32m   3095\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m-> 3096\u001b[0m     \u001b[43mfp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mseek\u001b[49m(\u001b[38;5;241m0\u001b[39m)\n\u001b[1;32m   3097\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m (\u001b[38;5;167;01mAttributeError\u001b[39;00m, io\u001b[38;5;241m.\u001b[39mUnsupportedOperation):\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'seek'",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [83]\u001b[0m, in \u001b[0;36m<cell line: 12>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     11\u001b[0m dataPlanet \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(planetDataFrames, columns \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPlanets\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPercentage\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mScale Fector\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mImage Path\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m planetDataFrames:\n\u001b[0;32m---> 13\u001b[0m     img \u001b[38;5;241m=\u001b[39m \u001b[43mImage\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mopen\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     14\u001b[0m     img\u001b[38;5;241m.\u001b[39mshow()\n",
+      "File \u001b[0;32m~/MakeAIWork/env/lib/python3.8/site-packages/PIL/Image.py:3098\u001b[0m, in \u001b[0;36mopen\u001b[0;34m(fp, mode, formats)\u001b[0m\n\u001b[1;32m   3096\u001b[0m     fp\u001b[38;5;241m.\u001b[39mseek(\u001b[38;5;241m0\u001b[39m)\n\u001b[1;32m   3097\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m (\u001b[38;5;167;01mAttributeError\u001b[39;00m, io\u001b[38;5;241m.\u001b[39mUnsupportedOperation):\n\u001b[0;32m-> 3098\u001b[0m     fp \u001b[38;5;241m=\u001b[39m io\u001b[38;5;241m.\u001b[39mBytesIO(\u001b[43mfp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread\u001b[49m())\n\u001b[1;32m   3099\u001b[0m     exclusive_fp \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m   3101\u001b[0m prefix \u001b[38;5;241m=\u001b[39m fp\u001b[38;5;241m.\u001b[39mread(\u001b[38;5;241m16\u001b[39m)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'read'"
+     ]
+    }
+   ],
+   "source": [
+    "from PIL import Image\n",
+    "import pandas as pd\n",
+    "\n",
+    "planetDataFrames = {\n",
+    "    'Planets': ['Jupiter', 'Saturnus', 'Uranus', 'Neptunus', 'Aarde', 'Venus', 'Mars'], \n",
+    "    'Percentage': ['1120%', '945%', '400%', '388%', '100%', '95%', '53%'], \n",
+    "    'Scale Fector': ['1120', '945', '400', '388', '100', '95', '53' ],\n",
+    "    'Image Path': ['pics/Jupiter.jpg', 'pics/saturnus.png', 'pics/uranus.jpg', 'pics/neptunus.jpg', 'pics/aarde.jpg', 'pics/venus.jpg', 'pics/mars.jpg']\n",
+    "                     } \n",
+    "\n",
+    "dataPlanet = pd.DataFrame(planetDataFrames, columns = ['Planets', 'Percentage', 'Scale Fector', 'Image Path'])\n",
+    "for x in planetDataFrames:\n",
+    "    img = Image.open('')\n",
+    "    img.show()\n",
+    "# print(dataPlanet)    \n"
    ]
   },
   {
