--- a/notebooks/variables/tuples.ipynb
+++ b/notebooks/variables/tuples.ipynb
@@ -262,6 +262,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1965e7fc-4628-4ad3-b136-c1d7cdf91a7c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shotoLis"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "5090e646-ff02-408e-ade7-4df431df5eda",
    "metadata": {},
@@ -412,7 +422,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
