--- a/simpylc/tensorflow_sample_setup/Tensorflow_start_setup.ipynb
+++ b/simpylc/tensorflow_sample_setup/Tensorflow_start_setup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 21,
    "id": "fb0edb38-4579-4461-92ff-df0685d94638",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 22,
    "id": "3a801bb8-d56c-4afd-9202-8789a22b446b",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 23,
    "id": "0eb55e30-3900-4d93-9794-0aa61aead802",
    "metadata": {},
    "outputs": [
@@ -141,7 +141,7 @@
        "4        0.2300   13  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,17 +157,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 31,
    "id": "1d2b4e85-fbdf-44de-b40f-99a247d39759",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      Length  Diameter  Height  Whole weight  Shucked weight  Viscera weight  \\\n",
+      "0      0.435     0.335   0.110        0.3340          0.1355          0.0775   \n",
+      "1      0.585     0.450   0.125        0.8740          0.3545          0.2075   \n",
+      "2      0.655     0.510   0.160        1.0920          0.3960          0.2825   \n",
+      "3      0.545     0.425   0.125        0.7680          0.2940          0.1495   \n",
+      "4      0.545     0.420   0.130        0.8790          0.3740          0.1695   \n",
+      "...      ...       ...     ...           ...             ...             ...   \n",
+      "3315   0.605     0.475   0.180        0.9365          0.3940          0.2190   \n",
+      "3316   0.700     0.525   0.190        1.6015          0.7070          0.3650   \n",
+      "3317   0.530     0.420   0.130        0.8365          0.3745          0.1670   \n",
+      "3318   0.395     0.315   0.105        0.3515          0.1185          0.0910   \n",
+      "3319   0.450     0.355   0.120        0.4120          0.1145          0.0665   \n",
+      "\n",
+      "      Shell weight  Age  \n",
+      "0           0.0965    7  \n",
+      "1           0.2250    6  \n",
+      "2           0.3700   14  \n",
+      "3           0.2600   16  \n",
+      "4           0.2300   13  \n",
+      "...            ...  ...  \n",
+      "3315        0.2950   15  \n",
+      "3316        0.4300   10  \n",
+      "3317        0.2490   11  \n",
+      "3318        0.1195   16  \n",
+      "3319        0.1600   19  \n",
+      "\n",
+      "[3320 rows x 8 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "# print(abalone_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 25,
    "id": "40fadfff-5c9a-45ec-b87e-ae68b612d421",
    "metadata": {},
    "outputs": [],
@@ -179,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 26,
    "id": "2a327ef0-6fb5-43ca-a3e1-e8f70d8d2d11",
    "metadata": {},
    "outputs": [],
@@ -189,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 27,
    "id": "05f2fa53-767f-4428-8118-316e29522113",
    "metadata": {},
    "outputs": [],
@@ -199,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 28,
    "id": "dbc9c2a5-fc4a-4295-a691-bd44f4c1261b",
    "metadata": {},
    "outputs": [
@@ -215,7 +249,7 @@
        "       [0.45 , 0.355, 0.12 , ..., 0.115, 0.067, 0.16 ]])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 29,
    "id": "839a7df2-c8dc-4705-9d71-5fc41e7c8e27",
    "metadata": {},
    "outputs": [],
@@ -243,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 30,
    "id": "eebed64f-bed2-4d0c-b34d-406e226f2894",
    "metadata": {},
    "outputs": [
@@ -252,34 +286,34 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "104/104 [==============================] - 0s 1ms/step - loss: 4.8894\n",
+      "104/104 [==============================] - 0s 883us/step - loss: 59.1491\n",
       "Epoch 2/10\n",
-      "104/104 [==============================] - 0s 1ms/step - loss: 4.8902\n",
+      "104/104 [==============================] - 0s 845us/step - loss: 11.7350\n",
       "Epoch 3/10\n",
-      "104/104 [==============================] - 0s 1ms/step - loss: 4.8874\n",
+      "104/104 [==============================] - 0s 850us/step - loss: 8.8427\n",
       "Epoch 4/10\n",
-      "104/104 [==============================] - 0s 975us/step - loss: 4.8940\n",
+      "104/104 [==============================] - 0s 868us/step - loss: 8.2441\n",
       "Epoch 5/10\n",
-      "104/104 [==============================] - 0s 1ms/step - loss: 4.9082\n",
+      "104/104 [==============================] - 0s 916us/step - loss: 7.7193\n",
       "Epoch 6/10\n",
-      "104/104 [==============================] - 0s 1ms/step - loss: 4.8774\n",
+      "104/104 [==============================] - 0s 914us/step - loss: 7.3025\n",
       "Epoch 7/10\n",
-      "104/104 [==============================] - 0s 1ms/step - loss: 4.8874\n",
+      "104/104 [==============================] - 0s 970us/step - loss: 6.9909\n",
       "Epoch 8/10\n",
-      "104/104 [==============================] - 0s 1ms/step - loss: 4.8815\n",
+      "104/104 [==============================] - 0s 954us/step - loss: 6.7772\n",
       "Epoch 9/10\n",
-      "104/104 [==============================] - 0s 1ms/step - loss: 4.8872\n",
+      "104/104 [==============================] - 0s 919us/step - loss: 6.6322\n",
       "Epoch 10/10\n",
-      "104/104 [==============================] - 0s 1ms/step - loss: 4.8829\n"
+      "104/104 [==============================] - 0s 920us/step - loss: 6.5265\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x193bd4a90>"
+       "<keras.callbacks.History at 0x189cf3880>"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
