--- a/simpylc/tensorflow_sample_setup/old/Tensorflow_start_setup.ipynb
+++ b/simpylc/tensorflow_sample_setup/old/Tensorflow_start_setup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "fb0edb38-4579-4461-92ff-df0685d94638",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 33,
    "id": "3a801bb8-d56c-4afd-9202-8789a22b446b",
    "metadata": {},
    "outputs": [],
@@ -30,8 +30,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 34,
    "id": "0eb55e30-3900-4d93-9794-0aa61aead802",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "abalone_train = pd.read_csv(\n",
+    "    \"/Users/JeroenArians/MakeAIWork/simpylc/tensorflow_sample_setup/old/abalone_train.csv\",\n",
+    "    names=[\"Length\", \"Diameter\", \"Height\", \"Whole weight\", \"Shucked weight\",\n",
+    "           \"Viscera weight\", \"Shell weight\", \"Age\"])\n",
+    "\n",
+    "# abalone_train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "1d2b4e85-fbdf-44de-b40f-99a247d39759",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print(abalone_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "40fadfff-5c9a-45ec-b87e-ae68b612d421",
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +87,6 @@
        "      <th>Shucked weight</th>\n",
        "      <th>Viscera weight</th>\n",
        "      <th>Shell weight</th>\n",
-       "      <th>Age</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -75,7 +99,6 @@
        "      <td>0.1355</td>\n",
        "      <td>0.0775</td>\n",
        "      <td>0.0965</td>\n",
-       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -86,7 +109,6 @@
        "      <td>0.3545</td>\n",
        "      <td>0.2075</td>\n",
        "      <td>0.2250</td>\n",
-       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -97,7 +119,6 @@
        "      <td>0.3960</td>\n",
        "      <td>0.2825</td>\n",
        "      <td>0.3700</td>\n",
-       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -108,7 +129,6 @@
        "      <td>0.2940</td>\n",
        "      <td>0.1495</td>\n",
        "      <td>0.2600</td>\n",
-       "      <td>16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -119,7 +139,6 @@
        "      <td>0.3740</td>\n",
        "      <td>0.1695</td>\n",
        "      <td>0.2300</td>\n",
-       "      <td>13</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -133,87 +152,28 @@
        "3   0.545     0.425   0.125         0.768          0.2940          0.1495   \n",
        "4   0.545     0.420   0.130         0.879          0.3740          0.1695   \n",
        "\n",
-       "   Shell weight  Age  \n",
-       "0        0.0965    7  \n",
-       "1        0.2250    6  \n",
-       "2        0.3700   14  \n",
-       "3        0.2600   16  \n",
-       "4        0.2300   13  "
+       "   Shell weight  \n",
+       "0        0.0965  \n",
+       "1        0.2250  \n",
+       "2        0.3700  \n",
+       "3        0.2600  \n",
+       "4        0.2300  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "abalone_train = pd.read_csv(\n",
-    "    \"/Users/JeroenArians/MakeAIWork/simpylc/tensorflow_sample_setup/abalone_train.csv\",\n",
-    "    names=[\"Length\", \"Diameter\", \"Height\", \"Whole weight\", \"Shucked weight\",\n",
-    "           \"Viscera weight\", \"Shell weight\", \"Age\"])\n",
-    "\n",
-    "abalone_train.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "id": "1d2b4e85-fbdf-44de-b40f-99a247d39759",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "      Length  Diameter  Height  Whole weight  Shucked weight  Viscera weight  \\\n",
-      "0      0.435     0.335   0.110        0.3340          0.1355          0.0775   \n",
-      "1      0.585     0.450   0.125        0.8740          0.3545          0.2075   \n",
-      "2      0.655     0.510   0.160        1.0920          0.3960          0.2825   \n",
-      "3      0.545     0.425   0.125        0.7680          0.2940          0.1495   \n",
-      "4      0.545     0.420   0.130        0.8790          0.3740          0.1695   \n",
-      "...      ...       ...     ...           ...             ...             ...   \n",
-      "3315   0.605     0.475   0.180        0.9365          0.3940          0.2190   \n",
-      "3316   0.700     0.525   0.190        1.6015          0.7070          0.3650   \n",
-      "3317   0.530     0.420   0.130        0.8365          0.3745          0.1670   \n",
-      "3318   0.395     0.315   0.105        0.3515          0.1185          0.0910   \n",
-      "3319   0.450     0.355   0.120        0.4120          0.1145          0.0665   \n",
-      "\n",
-      "      Shell weight  Age  \n",
-      "0           0.0965    7  \n",
-      "1           0.2250    6  \n",
-      "2           0.3700   14  \n",
-      "3           0.2600   16  \n",
-      "4           0.2300   13  \n",
-      "...            ...  ...  \n",
-      "3315        0.2950   15  \n",
-      "3316        0.4300   10  \n",
-      "3317        0.2490   11  \n",
-      "3318        0.1195   16  \n",
-      "3319        0.1600   19  \n",
-      "\n",
-      "[3320 rows x 8 columns]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# print(abalone_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "40fadfff-5c9a-45ec-b87e-ae68b612d421",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "abalone_features = abalone_train.copy()\n",
     "abalone_labels = abalone_features.pop('Age')\n",
-    "# abalone_features.head(2)"
+    "abalone_features.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "2a327ef0-6fb5-43ca-a3e1-e8f70d8d2d11",
    "metadata": {},
    "outputs": [],
@@ -223,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "05f2fa53-767f-4428-8118-316e29522113",
    "metadata": {},
    "outputs": [],
@@ -233,27 +193,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "dbc9c2a5-fc4a-4295-a691-bd44f4c1261b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0.435, 0.335, 0.11 , ..., 0.136, 0.077, 0.097],\n",
-       "       [0.585, 0.45 , 0.125, ..., 0.354, 0.207, 0.225],\n",
-       "       [0.655, 0.51 , 0.16 , ..., 0.396, 0.282, 0.37 ],\n",
-       "       ...,\n",
-       "       [0.53 , 0.42 , 0.13 , ..., 0.374, 0.167, 0.249],\n",
-       "       [0.395, 0.315, 0.105, ..., 0.118, 0.091, 0.119],\n",
-       "       [0.45 , 0.355, 0.12 , ..., 0.115, 0.067, 0.16 ]])"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "abalone_features = np.array(abalone_features)\n",
     "abalone_features"
@@ -261,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "839a7df2-c8dc-4705-9d71-5fc41e7c8e27",
    "metadata": {},
    "outputs": [],
@@ -277,47 +220,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "eebed64f-bed2-4d0c-b34d-406e226f2894",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/10\n",
-      "104/104 [==============================] - 0s 883us/step - loss: 59.1491\n",
-      "Epoch 2/10\n",
-      "104/104 [==============================] - 0s 845us/step - loss: 11.7350\n",
-      "Epoch 3/10\n",
-      "104/104 [==============================] - 0s 850us/step - loss: 8.8427\n",
-      "Epoch 4/10\n",
-      "104/104 [==============================] - 0s 868us/step - loss: 8.2441\n",
-      "Epoch 5/10\n",
-      "104/104 [==============================] - 0s 916us/step - loss: 7.7193\n",
-      "Epoch 6/10\n",
-      "104/104 [==============================] - 0s 914us/step - loss: 7.3025\n",
-      "Epoch 7/10\n",
-      "104/104 [==============================] - 0s 970us/step - loss: 6.9909\n",
-      "Epoch 8/10\n",
-      "104/104 [==============================] - 0s 954us/step - loss: 6.7772\n",
-      "Epoch 9/10\n",
-      "104/104 [==============================] - 0s 919us/step - loss: 6.6322\n",
-      "Epoch 10/10\n",
-      "104/104 [==============================] - 0s 920us/step - loss: 6.5265\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<keras.callbacks.History at 0x189cf3880>"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "abalone_model.fit(abalone_features, abalone_labels, epochs=10)"
    ]
