--- a/simpylc/tensorflow_sample_setup/learningSonar_21_S_290922.ipynb
+++ b/simpylc/tensorflow_sample_setup/learningSonar_21_S_290922.ipynb
@@ -35,25 +35,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "id": "1c562f89-e955-4069-8138-d75a5c6311ce",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0   -22\n",
+       "1   -22\n",
+       "2   -22\n",
+       "3   -22\n",
+       "4   -22\n",
+       "Name: angle, dtype: int64"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "distance = S_290922_21.copy()\n",
     "steeringAngle = distance.pop('angle')\n",
-    "# steeringAngle.head()"
+    "steeringAngle.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "id": "4f280300-b536-4bda-a2b1-b676630addf5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.451, 1.271, 1.766],\n",
+       "       [1.452, 1.272, 1.767],\n",
+       "       [1.451, 1.27 , 1.766],\n",
+       "       ...,\n",
+       "       [1.983, 1.74 , 1.353],\n",
+       "       [1.983, 1.74 , 1.353],\n",
+       "       [1.983, 1.74 , 1.353]])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "distance = np.array(distance)\n",
-    "# distance"
+    "distance"
    ]
   },
   {
@@ -403,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "id": "4737dd25-78a9-4085-9120-5c36822617bf",
    "metadata": {},
    "outputs": [
@@ -411,12 +444,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Assets written to: learningModal/assets\n"
+      "INFO:tensorflow:Assets written to: learningModelSonar.csv/assets\n"
      ]
     }
    ],
    "source": [
-    "LearningModel.save('learningModal')"
+    "LearningModel.save('learningModelSonar')"
    ]
   },
   {
@@ -425,11 +458,7 @@
    "id": "6bd8cb26-a6a7-4690-9891-8fa9931db27f",
    "metadata": {},
    "outputs": [],
-   "source": [
-    " def func(*args, **kwargs):\n",
-    "     print(args)\n",
-    "     print(kwargs)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
